--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
   <header class="main-header">
     <div class="header-wrapper">
       <div class="header-box">
-        <a href="index.html" class="logo"> Техномарт</a>
-        <form class="form-search">
+        <a href="index.html" class="logo">Техномарт</a>
+        <form class="form-search search-icon">
           <input class="search-field" type="search" placeholder="Поиск:">
         </form>
-        <ul class="users-panel">
-          <li class="panel-item"><a class="button-panel" href="#">Закладки</a></li>
-          </li>
-          <li class="panel-item"><a class="button-panel" href="#">Корзина</a></li>
-          </li>
-          <li class="panel-item panel-green"><a class="button-panel" href="#">Оформить заказ</a></li>
-          </li>
-        </ul>
+        <div class="users-panel">
+          <a class="button-panel button-bookmark" href="#">Закладки: 0</a></li>
+          <a class="button-panel button-backet" href="#">Корзина: 0</a></li>
+          <a class="button-panel panel-green" href="#">Оформить заказ</a></li>
+        </div>
       </div>
     </div>
     <div class="header-middle">
@@ -31,11 +28,10 @@
         <p class="headline-text">
           Интернет-магазин
           строительных материалов
-          и инструментов для ремонта
+          и&nbsp;инструментов&nbsp;для&nbsp;ремонта
         </p>
       </div>
       <div class="contacts-box">
-        <img src="img/icon-phone.svg" width="15" height="15" alt="">
         <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
         <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
       </div>
@@ -47,15 +43,15 @@
       </div>
     </div>
     <nav class="main-nav">
-      <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Компания</a></li>
-        <li class="nav-item"><a class="nav-link" href="catalog.html">Каталог</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Новости</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Спецпредложения</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Доставка</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
-      </ul>
+      <div class="nav-list">
+        <a class="nav-link" href="index.html">Главная</a></li>
+        <a class="nav-link" href="#">Компания</a></li>
+        <a class="nav-link" href="catalog.html">Каталог</a></li>
+        <a class="nav-link" href="#">Новости</a></li>
+        <a class="nav-link" href="#">Спецпредложения</a></li>
+        <a class="nav-link" href="#">Доставка</a></li>
+        <a class="nav-link" href="#">Контакты</a></li>
+      </div>
     </nav>
   </header>
   <main class="main">
@@ -115,7 +111,6 @@
           <div class="signature-car signature-item">
             <p class="signature-text">Доставка</p>
             <a class="signature-fifth signature-button" href="#">Бесплатно</a>
-            <img src="img/icon-car.svg" width="44" height="65" alt="">
           </div>
 
         </div>
@@ -129,40 +124,54 @@
       <div>
         <div class="arcticle-wrapper">
           <article class="arcticle">
-            <img class="item-img" src="img/perforatorbfg9.jpg" alt="Перфоратор BOSCH BFG 9000">
-            <h3 class="item-headline">Перфоратор BOSCH BFG 9000</h3>
-            <p class="price-discount">32500 Р.</p>
-            <div class="prise-wrapper">
-              <p class="price">25500 Р.</p>
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <button class="button-buy visually-hidden" type="button">купить</button>
-            <button class="add-bookmarks visually-hidden" type="button">в закладки</button>
+            <img class="item-img" src="img/perforatorbfg9.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 9000">
+            <h3 class="item-headline">Перфоратор BOSCH BFG 9000</h3>
+            <p class="price-discount">32500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">25500 Р .</p>
+            </div>
           </article>
 
           <article class="arcticle">
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
-            <p class="price-discount">22500 Р.</p>
-            <p class="price">15500 Р.</p>
-            <button class="button-buy visually-hidden" type="button">купить</button>
-            <button class="add-bookmarks visually-hidden" type="button">в закладки</button>
+            <p class="price-discount">22500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">15500 Р .</p>
+            </div>
           </article>
 
           <article class="arcticle">
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
-            <p class="price-discount">30500 Р.</p>
-            <p class="price">25500 Р.</p>
-            <button class="button-buy visually-hidden" type="button">купить</button>
-            <button class="add-bookmarks visually-hidden" type="button">в закладки</button>
+            <p class="price-discount">30500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">25500 Р .</p>
+            </div>
           </article>
 
-          <article class="arcticle">
-            <img class="item-img" src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
-            <h3 class="item-headline">Перфоратор BOSCH BFG 2000 </h3>
-            <p class="price">12500 Р.</p>
-            <button class="button-buy visually-hidden" type="button">купить</button>
-            <button class="add-bookmarks visually-hidden" type="button">в закладки</button>
+          <article class="arcticle arcticle-new">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
+            <div class="prise-wrapper">
+              <p class="price">12500 Р .</p>
+            </div>
           </article>
         </div>
       </div>
@@ -174,23 +183,14 @@
         <a class="button-manufacturers" href="#">Все производители</a>
       </div>
       <div class="manufacturers-wrapper">
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/bosch.png" width="126" height="37"
-            alt="bosch"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/makita.png" width="123" height="40"
-            alt="Makita"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/dewalt.png" width="146" height="44"
-            alt="DeWALT"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/interscall.png" width="200" height="88"
-            alt="Интерскол"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/hitachi.png" width="169" height="31"
-            alt="Hitachi"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/lg.png" width="121" height="73"
-            alt="LG"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/aeg.png" width="151" height="96"
-            alt="AEG"></a>
-        <a class="manufacturers-item"> <img class="manufacturers-img" src="img/metabo.png" width="204" height="69"
-            alt="Metabo"></a>
-
+        <a class="manufacturers-item img-bosch" href="#">
+          <a class="manufacturers-item img-makita" href="#">
+            <a class="manufacturers-item img-dewalt" href="#">
+              <a class="manufacturers-item img-interscall" href="#">
+                <a class="manufacturers-item img-hitachi" href="#">
+                  <a class="manufacturers-item img-lg" href="#">
+                    <a class="manufacturers-item img-aeg" href="#">
+                      <a class="manufacturers-item img-metabo" href="#"></a>
       </div>
     </section>
     <section class="service">
@@ -203,9 +203,9 @@
       </div>
       <div class="service-wrapper">
         <ul class="service-buttons">
-          <li class="button-service"><a href="#">Доставка</a></li>
-          <li class="button-service"><a href="#">Гарантия</a></li>
-          <li class="button-service"><a href="#">Кредит</a></li>
+          <li><a class="button-service" href="#">Доставка</a></li>
+          <li><a class="button-service" href="#">Гарантия</a></li>
+          <li><a class="button-service" href="#">Кредит</a></li>
         </ul>
         <ul class="service-list">
           <li class="service-text service-png">
@@ -214,7 +214,7 @@
               Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно!
               ведь мы неплохо заработем,
-              поднимая его на ваш этаж!
+              поднимая&nbsp;его&nbsp;на&nbsp;ваш этаж!
             </p>
           </li>
 
@@ -260,7 +260,7 @@
         <h2 class="contacts-headline">Контакты</h2>
         <p class="text-office">Вы можете забрать товар сами,
           заехав в наш офис:</p>
-        <img class="streat-img" src="img/map-streat.jpg" width="300" height="161" alt="Большая Конюшенная ул., 19">
+        <img class="streat-img" src="img/map-streat.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
         <a class="button-lost" href="#">Заблудились?Напишите нам!</a>
       </section>
     </div>
@@ -314,17 +314,14 @@
           Все права защищены
         </p>
         <ul class="social-list">
-          <li class="social-item">
+          <li class="social-item social-vk">
             <a class="social-vk" href="#"></a>
-            <img src="img/icon-vk.svg" width="15" height="15" alt="">
+          </li>
+          <li class="social-item social-fb">
+            <a class="social-button" href="#"></a>
           </li>
           <li class="social-item">
-            <a class="social-fb" href="#"></a>
-            <img src="img/icon-fb.svg" width="15" height="15" alt="">
-          </li>
-          <li class="social-item">
-            <a class="social-insta" href="#"></a>
-            <img src="img/icon-insta.svg" width="15" height="15" alt="">
+            <a class="social-button social-insta" href="#"></a>
           </li>
         </ul>
         <div class="feedback-wrapper">
